# perplexFern

./: README.md  example.py  pyproject.toml
perplexfern/: __init__.py  fractal.py  galaxy.py  galaxy_viz.py  metrics.py  parser.py  visualize.py
tests/: test_perplexfern.py
