[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perplexfern"
version = "0.1.0"
description = "Visualise the complexity of natural text as a fractal fern."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "perplexFern contributors"},
]
keywords = ["nlp", "perplexity", "entropy", "fractal", "visualization", "text-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/perplexFern/perplexFern"
Issues = "https://github.com/perplexFern/perplexFern/issues"

[tool.setuptools.packages.find]
include = ["perplexfern*"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
